--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ProjectPrototype</string>
+    <string name="app_name">7awalaya</string>
+    <string name="title_activity_map">Map</string>
 </resources>
