--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,17 @@
         <item>Kahraba2y</item>
         <item>Petrol Station/Banzeena</item>
     </string-array>
+
+    <string-array name="planets_array">
+        <item>User Profile</item>
+        <item>Satellite View</item>
+        <item>Settings</item>
+    </string-array>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
